tenace (0.16) UNRELEASED; urgency=medium

  * Update to dds 2.9.0, remove our dds copy, remove gnulib physmem module.

 -- Christoph Berg <myon@debian.org>  Sat, 22 Sep 2018 22:35:58 +0200

tenace (0.15) upstream; urgency=medium

  * Adapt glib-genmarshal call to new syntax.

 -- Christoph Berg <myon@debian.org>  Mon, 21 Aug 2017 20:04:11 +0200

tenace (0.14) upstream; urgency=medium

  * Correctly read lin files starting with qx||.
  * Various minor build system and gtk compatibility tweaks.
  * Add desktop menu and icon.

 -- Christoph Berg <myon@debian.org>  Sun, 12 Jun 2016 15:40:13 +0200

tenace (0.13) upstream; urgency=low

  * Support reading compressed svg files (.svgz).
  * Explicitely link with -lm.
  * On startup, show a random deal if no file is loaded.
  * Set dealer and vulnerability correctly on new boards.

 -- Christoph Berg <myon@debian.org>  Fri, 04 Oct 2013 22:02:06 +0200

tenace (0.12) upstream; urgency=low

  * Build system updates; fix building with --as-needed.
  * Add /usr/share/aisleriot/cards/{bonded,paris}.svg and
    /usr/share/gnome-games-common/cards/gnomangelo_bitmap.svg to list of
    default svg files.
  * Initialize win->svg correctly.
  * handdisplay: include glib.h directly.

 -- Christoph Berg <myon@debian.org>  Tue, 03 Apr 2012 22:34:27 +0200

tenace (0.11) upstream; urgency=low

  * "Open in web" shows the current deal on
    http://www.bridgebase.com/tools/handviewer.html. Suggested by Christos
    Trochalakis.
  * Import dds 2.0.1.
  * Show dds version number in about dialog.
  * Port to CalcDDtable (using openmp in libdds).

 -- Christoph Berg <myon@debian.org>  Thu, 10 Feb 2011 00:24:10 +0100

tenace (0.10) upstream; urgency=low

  * Yet another GUI change, now using GtkBuilder.
  * Port to dds 2.0:
    + Use gnulib to import "nproc".
    + Use threads to parallelize parscore computation.

 -- Christoph Berg <myon@debian.org>  Sun, 25 Apr 2010 01:04:24 +0200

tenace (0.9) upstream; urgency=low
