@@ -1,6 +1,7 @@
 tenace (0.16) UNRELEASED; urgency=medium
 
   * Update to dds 2.9.0, remove our dds copy, remove gnulib physmem module.
+  * Fix handling of board numbers in menu callback.
 
  -- Christoph Berg <myon@debian.org>  Sat, 22 Sep 2018 22:35:58 +0200
 
